# desi-clustering

./: .gitignore  pyproject.toml
clustering_statistics/: README.md  compute_stats.py  tools.py
clustering_statistics/job_scripts/: blinded_data_pip.py  desipipe_data_png.py
clustering_statistics/nb/: checking_recon.ipynb  example_read_stats.ipynb  validation_analytical_covariance.ipynb
clustering_statistics/tests/: test-recon.py  test.py
full_shape/: fiducial_likelihoods.py  fit_bispectrum_cutsky.py  fit_cutsky.py  fit_spectrum_cutsky.py  run_fit.py  tools.py
full_shape/prakhar/: cutsky_data_tools.py  pk_GCcomb_eft.py  pk_bk_eft_ngc.py
full_shape/tests/: test.py
nb/: read_clustering.ipynb
