[project]
name = "desi-clustering"
authors = [{name = "cosmodesi"}]
description = "Fiducial DESI Clustering analysis"
version = "0.2.0"
dependencies = []
readme = "README.md"
requires-python = ">=3.10"
urls = {Repository = "https://github.com/cosmodesi/desi-clustering"}
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
clustering-stats = "clustering_statistics.compute_stats:main"

[tool.setuptools]
packages = ["clustering_statistics", "full_shape"]